cd lab/cs17b031_week_8/1/y.output
Grammar

    0 $accept: Q $end

    1 Q: STM
    2  | Q STM

    3 $@1: %empty

    4 STM: cb1 $@1 A cb2

    5 A: T B SCOL A
    6  | STM A
    7  | error
    8  | %empty

    9 B: B COMMA D
   10  | D

   11 D: P ID K

   12 P: pt1 P
   13  | %empty

   14 K: R
   15  | eql NUM
   16  | eql FNUM
   17  | %empty

   18 R: sq1 NUM sq2 R
   19  | sq1 NUM sq2

   20 T: INT
   21  | FLOAT
   22  | CHAR


Terminals, with rules where they appear

$end (0) 0
error (256) 7
NUM (258) 15 18 19
FNUM (259) 16
sq1 (260) 18 19
sq2 (261) 18 19
FLOAT (262) 21
INT (263) 20
CHAR (264) 22
SCOL (265) 5
COMMA (266) 9
ID (267) 11
cb1 (268) 4
cb2 (269) 4
eql (270) 15 16
pt1 (271) 12


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
Q (18)
    on left: 1 2, on right: 0 2
STM (19)
    on left: 4, on right: 1 2 6
$@1 (20)
    on left: 3, on right: 4
A (21)
    on left: 5 6 7 8, on right: 4 5 6
B (22)
    on left: 9 10, on right: 5 9
D (23)
    on left: 11, on right: 9 10
P (24)
    on left: 12 13, on right: 11 12
K (25)
    on left: 14 15 16 17, on right: 11
R (26)
    on left: 18 19, on right: 14 18
T (27)
    on left: 20 21 22, on right: 5


State 0

    0 $accept: . Q $end

    cb1  shift, and go to state 1

    Q    go to state 2
    STM  go to state 3


State 1

    4 STM: cb1 . $@1 A cb2

    $default  reduce using rule 3 ($@1)

    $@1  go to state 4


State 2

    0 $accept: Q . $end
    2 Q: Q . STM

    $end  shift, and go to state 5
    cb1   shift, and go to state 1

    STM  go to state 6


State 3

    1 Q: STM .

    $default  reduce using rule 1 (Q)


State 4

    4 STM: cb1 $@1 . A cb2

    error  shift, and go to state 7
    FLOAT  shift, and go to state 8
    INT    shift, and go to state 9
    CHAR   shift, and go to state 10
    cb1    shift, and go to state 1

    cb2  reduce using rule 8 (A)

    STM  go to state 11
    A    go to state 12
    T    go to state 13


State 5

    0 $accept: Q $end .

    $default  accept


State 6

    2 Q: Q STM .

    $default  reduce using rule 2 (Q)


State 7

    7 A: error .

    $default  reduce using rule 7 (A)


State 8

   21 T: FLOAT .

    $default  reduce using rule 21 (T)


State 9

   20 T: INT .

    $default  reduce using rule 20 (T)


State 10

   22 T: CHAR .

    $default  reduce using rule 22 (T)


State 11

    6 A: STM . A

    error  shift, and go to state 7
    FLOAT  shift, and go to state 8
    INT    shift, and go to state 9
    CHAR   shift, and go to state 10
    cb1    shift, and go to state 1

    cb2  reduce using rule 8 (A)

    STM  go to state 11
    A    go to state 14
    T    go to state 13


State 12

    4 STM: cb1 $@1 A . cb2

    cb2  shift, and go to state 15


State 13

    5 A: T . B SCOL A

    pt1  shift, and go to state 16

    $default  reduce using rule 13 (P)

    B  go to state 17
    D  go to state 18
    P  go to state 19


State 14

    6 A: STM A .

    $default  reduce using rule 6 (A)


State 15

    4 STM: cb1 $@1 A cb2 .

    $default  reduce using rule 4 (STM)


State 16

   12 P: pt1 . P

    pt1  shift, and go to state 16

    $default  reduce using rule 13 (P)

    P  go to state 20


State 17

    5 A: T B . SCOL A
    9 B: B . COMMA D

    SCOL   shift, and go to state 21
    COMMA  shift, and go to state 22


State 18

   10 B: D .

    $default  reduce using rule 10 (B)


State 19

   11 D: P . ID K

    ID  shift, and go to state 23


State 20

   12 P: pt1 P .

    $default  reduce using rule 12 (P)


State 21

    5 A: T B SCOL . A

    error  shift, and go to state 7
    FLOAT  shift, and go to state 8
    INT    shift, and go to state 9
    CHAR   shift, and go to state 10
    cb1    shift, and go to state 1

    cb2  reduce using rule 8 (A)

    STM  go to state 11
    A    go to state 24
    T    go to state 13


State 22

    9 B: B COMMA . D

    pt1  shift, and go to state 16

    $default  reduce using rule 13 (P)

    D  go to state 25
    P  go to state 19


State 23

   11 D: P ID . K

    sq1  shift, and go to state 26
    eql  shift, and go to state 27

    $default  reduce using rule 17 (K)

    K  go to state 28
    R  go to state 29


State 24

    5 A: T B SCOL A .

    $default  reduce using rule 5 (A)


State 25

    9 B: B COMMA D .

    $default  reduce using rule 9 (B)


State 26

   18 R: sq1 . NUM sq2 R
   19  | sq1 . NUM sq2

    NUM  shift, and go to state 30


State 27

   15 K: eql . NUM
   16  | eql . FNUM

    NUM   shift, and go to state 31
    FNUM  shift, and go to state 32


State 28

   11 D: P ID K .

    $default  reduce using rule 11 (D)


State 29

   14 K: R .

    $default  reduce using rule 14 (K)


State 30

   18 R: sq1 NUM . sq2 R
   19  | sq1 NUM . sq2

    sq2  shift, and go to state 33


State 31

   15 K: eql NUM .

    $default  reduce using rule 15 (K)


State 32

   16 K: eql FNUM .

    $default  reduce using rule 16 (K)


State 33

   18 R: sq1 NUM sq2 . R
   19  | sq1 NUM sq2 .

    sq1  shift, and go to state 26

    $default  reduce using rule 19 (R)

    R  go to state 34


State 34

   18 R: sq1 NUM sq2 R .

    $default  reduce using rule 18 (R)
